tests/errors/nullable-lookup.o_0
value : x?.y Enforce Str
